Implemented abeliophyllum.html and ageratum.html

--- a/html/flowerCatalog.html
+++ b/html/flowerCatalog.html
@@ -2,7 +2,7 @@
 
 <head>
   <title></title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/flowerCatalog.css" />
 </head>
 
 <body>
@@ -18,12 +18,12 @@
     <div class="content">
       <ul>
         <li>
-          <a href="Abeliophyllum.html">
+          <a href="abeliophyllum.html">
             Abeliophyllum
           </a> <br>
         </li>
         <li>
-          <a href="Ageratum.html">Ageratum</a>
+          <a href="ageratum.html">Ageratum</a>
         </li>
       </ul>
       <img src="images/animated-flower-image-0021.gif" alt="gif" class="jar">
