--- a/html/Abeliophyllum.html
+++ b/html/Abeliophyllum.html
@@ -1,8 +1,46 @@
 <html>
 
+<head>
+  <title></title>
+  <link rel="stylesheet" href="css/singleFlower.css" />
+</head>
+
 <body>
-  <h1>Abeliophyllum</h1>
-  <img src="images/pbase-Abeliophyllum.jpg" alt="Abeliophyllum">
+  <header>
+    <h1>
+      <a href="flowerCatalog.html">
+        << </a>
+          Abeliophyllum
+    </h1>
+  </header>
+
+  <div class="abeliophyllum">
+    <figure>
+      <img src="images/pbase-Abeliophyllum.jpg" alt="Abeliophyllum">
+    </figure>
+
+    <div class="description">
+      <p>
+        Abeliophyllum (White Forsythia, or Korean Abelialeaf) is a monotypic genus of flowering plants in the olive
+        family, Oleaceae. It consists of one species, Abeliophyllum distichum Nakai, endemic to Korea, where it is
+        endangered in the wild, occurring at only seven sites. It is related to Forsythia, but differs in having white,
+        not yellow, flowers.
+      </p>
+
+      <p>
+        It is a deciduous shrub growing to 1 to 2 m tall. The leaves are opposite, simple, 6 to 10 cm long and 3 to 4.5
+        cm wide, pubescent both above and below. The flowers are produced in early spring before the new leaves appear;
+        they are white and fragrant, about 1 cm long, with a four-lobed corolla. The fruit is a round, winged samara 2
+        to 3 cm diameter.
+      </p>
+
+      <p>
+        It is cultivated as an ornamental plant in Europe and North America.
+      </p>
+
+      <a href="pdfs/abeliophyllum.pdf">Download as book</a>
+    </div>
+  </div>
 </body>
 
 </html>
