Implemented Guess book

--- a/public/ageratum.html
+++ b/public/ageratum.html
@@ -37,7 +37,7 @@
         small, dry fruits.
       </p>
 
-      <a href="pdfs/abeliophyllum.pdf">Download as book</a>
+      <a href="pdfs/ageratum.pdf">Download as book</a>
 
     </div>
   </div>
