Writing message in guest book

--- a/private/guestBookTemplate.html
+++ b/private/guestBookTemplate.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Guest Book</title>
-  <link rel="stylesheet" href="css/guestBook.css">
+  <link rel="stylesheet" href="../private/css/guestBook.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
   <hr>
 
   <p>
-    6/29/2022, 8:23:05 AM hey : noCss<br>6/29/2022, 8:18:49 AM Sunny : Good+collection<br>6/29/2022, 8:18:31 AM Lucky : Hello
+    ___COMMENT___
   </p>
 
 </body>
