Moved to http module from my net based server

--- a/private/guestBookTemplate.html
+++ b/private/guestBookTemplate.html
@@ -2,13 +2,13 @@
 
 <head>
   <title>Guest Book</title>
-  <link rel="stylesheet" href="../private/css/guestBook.css">
+  <link rel="stylesheet" href="css/guest-book.css">
 </head>
 
 <body>
   <header>
     <h1>
-      <a href="flowerCatalog.html">
+      <a href="flower-catalog.html">
         << </a>
           Guest Book
     </h1>
