--- a/public/ageratum.html
+++ b/public/ageratum.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>
-      <a href="flowerCatalog.html">
+      <a href="flower-catalog.html">
         << </a>
           Ageratum
     </h1>
