--- a/public/flower-catalog.html
+++ b/public/flower-catalog.html
@@ -2,7 +2,7 @@
 
 <head>
   <title></title>
-  <link rel="stylesheet" href="css/flowerCatalog.css" />
+  <link rel="stylesheet" href="css/flower-catalog.css" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <img src="images/animated-flower-image-0021.gif" alt="gif" class="jar">
-      <a href="guestBook.html">Guest book</a>
+      <a href="guest-book.html">Guest book</a>
     </div>
   </div>
 </body>
