--- a/public/guest-book.html
+++ b/public/guest-book.html
@@ -2,13 +2,13 @@
 
 <head>
   <title>Guest Book</title>
-  <link rel="stylesheet" href="css/guestBook.css">
+  <link rel="stylesheet" href="css/guest-book.css">
 </head>
 
 <body>
   <header>
     <h1>
-      <a href="flowerCatalog.html">
+      <a href="flower-catalog.html">
         << </a>
           Guest Book
     </h1>
@@ -35,7 +35,7 @@
   <hr>
 
   <p>
-    6/29/2022, 8:23:05 AM hey : noCss<br>6/29/2022, 8:18:49 AM Sunny : Good+collection<br>6/29/2022, 8:18:31 AM Lucky : Hello
+    6/29/2022, 1:36:41 PM prem : have lunch first<br>6/29/2022, 1:09:15 PM Hello : Ma'am<br>6/29/2022, 1:08:55 PM One : two<br>29/06/2022, 12:26:50 Lucky : What a good reference!!<br>29/06/2022, 12:26:16 date : message<br>29/06/2022, 12:24:27 first : second<br>undefined abc : cde<br>c a : b<br>c a : b<br>c a : b<br>c a : b<br>c a : b
   </p>
 
 </body>
