Created 'guestBook' entity

--- a/public/flower-catalog.html
+++ b/public/flower-catalog.html
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <img src="images/animated-flower-image-0021.gif" alt="gif" class="jar">
-      <a href="guest-book.html">Guest book</a>
+      <a href="guest-book">Guest book</a>
     </div>
   </div>
 </body>
