--- a/public/guest-book.html
+++ b/public/guest-book.html
@@ -14,7 +14,7 @@
     </h1>
   </header>
 
-  <form action="/comment" method="get">
+  <form action="/add-guest" method="get">
     <h2>Leave a comment</h2> <br>
 
     <div>
@@ -35,7 +35,7 @@
   <hr>
 
   <p>
-    6/29/2022, 1:36:41 PM prem : have lunch first<br>6/29/2022, 1:09:15 PM Hello : Ma'am<br>6/29/2022, 1:08:55 PM One : two<br>29/06/2022, 12:26:50 Lucky : What a good reference!!<br>29/06/2022, 12:26:16 date : message<br>29/06/2022, 12:24:27 first : second<br>undefined abc : cde<br>c a : b<br>c a : b<br>c a : b<br>c a : b<br>c a : b
+    6/30/2022, 11:21:08 AM hello : all<br>30/06/2022, 11:19:35 first : second<br>30/06/2022, 11:19:28 a : b<br>30/06/2022, 11:16:02 a : b<br>30/06/2022, 11:14:55 A : b<br>6/30/2022, 11:12:27 AM Sunny : It's sunny<br>6/30/2022, 11:09:33 AM After : wiring guestBook entity<br>6/29/2022, 3:42:17 PM Lakshmi : Hello
   </p>
 
 </body>
