--- a/private/guestBookTemplate.html
+++ b/private/guestBookTemplate.html
@@ -14,7 +14,7 @@
     </h1>
   </header>
 
-  <form action="/comment" method="get">
+  <form action="/add-guest" method="get">
     <h2>Leave a comment</h2> <br>
 
     <div>
