Moved sync app to async.
	Extracted app.js.
	Changed contract of all handlers.
	Implemented body parser.

--- a/private/guestBookTemplate.html
+++ b/private/guestBookTemplate.html
@@ -14,7 +14,7 @@
     </h1>
   </header>
 
-  <form action="/add-guest" method="get">
+  <form action="/add-guest" method="post">
     <h2>Leave a comment</h2> <br>
 
     <div>
