Added sessions and cookies.

--- a/public/flower-catalog.html
+++ b/public/flower-catalog.html
@@ -39,7 +39,7 @@
       <img id="img" style="visibility: visible;" src="images/animated-flower-image-0021.gif" alt="gif" class="jar"
         onclick="disappear(event)">
 
-      <a href="guest-book">Guest book</a>
+      <a href="do-login">Guest book</a>
     </div>
   </div>
 </body>
