--- a/private/guestBookTemplate.html
+++ b/private/guestBookTemplate.html
@@ -12,15 +12,16 @@
         << </a>
           Guest Book
     </h1>
+    <form action="/logout" method="post">
+      <!-- <a href="flower-catalog.html">
+        <button style="float: right;">logout</button>
+      </a> -->
+      <input type="submit" value="logout">
+    </form>
   </header>
 
   <form action="/add-guest" method="post">
     <h2>Leave a comment</h2> <br>
-
-    <div>
-      <label for="name">Name:</label>
-      <input type="text" name="name">
-    </div>
 
     <div>
       <label for="comment">Comment:</label>
