--- a/public/guest-book.html
+++ b/public/guest-book.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>
-      <a href="flower-catalog.html">
+      <a href="index.html">
         << </a>
           Guest Book
     </h1>
@@ -35,7 +35,9 @@
   <hr>
 
   <p>
-    6/30/2022, 11:21:08 AM hello : all<br>30/06/2022, 11:19:35 first : second<br>30/06/2022, 11:19:28 a : b<br>30/06/2022, 11:16:02 a : b<br>30/06/2022, 11:14:55 A : b<br>6/30/2022, 11:12:27 AM Sunny : It's sunny<br>6/30/2022, 11:09:33 AM After : wiring guestBook entity<br>6/29/2022, 3:42:17 PM Lakshmi : Hello
+    6/30/2022, 11:21:08 AM hello : all<br>30/06/2022, 11:19:35 first : second<br>30/06/2022, 11:19:28 a :
+    b<br>30/06/2022, 11:16:02 a : b<br>30/06/2022, 11:14:55 A : b<br>6/30/2022, 11:12:27 AM Sunny : It's
+    sunny<br>6/30/2022, 11:09:33 AM After : wiring guestBook entity<br>6/29/2022, 3:42:17 PM Lakshmi : Hello
   </p>
 
 </body>
