--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title></title>
-  <link rel="stylesheet" href="css/flower-catalog.css" />
+  <link rel="stylesheet" href="css/index.css" />
   <script>
     const disappear = function (event) {
       const element = document.getElementById(event.target.id);
