--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Registration form</h1>
   <form id="signup-form">
-    <div id="name">
+    <div id="username">
       <label for="username">Enter you name:</label>
       <input type="text" name="username" required>
     </div>
