Added authentication in login page Started using the module 'morgan' Made signup handler generic, for any user data

--- a/public/login.html
+++ b/public/login.html
@@ -15,6 +15,7 @@
     <div id="login">
       <input type="button" value="Login" onclick="login()">
     </div>
+    <a href="signup.html">signup</a>
     <p id="message"></p>
   </form>
 
